src/templates/Page/index.scss
main.page {
  height: calc(100% - #{$navbar-height-md} - #{$footer-height-md});
  text-align: center;

  .container {
    background: aliceblue;
    min-height: 650px;

    .body {
      max-width: 500px;
      text-align: left;
    }

    .ContentfulAsset5SvfDx2D4zYjaxUxQt8oKI {
      border-radius: 100%;
      margin: 0 auto 15px;
      width: 250px;
    }
  }
}

@media (max-width: 991px) {
  main.page {
    .container {
      .body {
        width: 100%;
      }

      .ContentfulAsset5SvfDx2D4zYjaxUxQt8oKI {
        width: 150px;
      }
    }
  }
}

